test/errors/dotExprNotAllowed.compopts
--detailed-errors # dotExprNotAllowed-detailed.good
--no-detailed-errors # dotExprNotAllowed-brief.good
